// NOTE: release process automatically updates titles with "Unreleased" to title with actual release version
= Change Log

For a list of breaking changes see link:#breaking[breaking-changes]

// Release workflow will:
// - Fail if there is no "== Unreleased" section header
// - Helpfully fail when the section contains no descriptive text
// - Replace the Unreleased section header with actual release version
// - Prepend a new Unreleased section header

== Unreleased

== v1.0.92-alpha

* Upgraded from rewrite-clj v0 to rewrite-clj v1
* Release workflow now creates a GitHub release

https://github.com/lread/test-doc-blocks/compare/v1.0.85-alpha\...v1.0.92-alpha[Gritty details of changes for this release]

== v1.0.85-alpha

* Correct public API for cljdoc

https://github.com/lread/test-doc-blocks/compare/v1.0.82-alpha\...v1.0.85-alpha[Gritty details of changes for this release]

== v1.0.82-alpha

* Developer facing only: more updates to release workflow

https://github.com/lread/test-doc-blocks/compare/v1.0.80-alpha\...v1.0.82-alpha[Gritty details of changes for this release]

== v1.0.80-alpha

* Developer facing only: updates to release workflow

https://github.com/lread/test-doc-blocks/compare/v1.0.76-alpha\...v1.0.80-alpha[Gritty details of changes for this release]

== v1.0.76-alpha

* First release

[#breaking]
== Breaking Changes

// Release workflow will:
// - If an "=== Unreleased Breaking Changes" section header exists here:
//   - Helpfully fail the section contains no descriptive text
//   - Replace the Unreleased section header with actual release version

Still in alpha, nothing to track yet!

// === Unreleased Breaking Changes